--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
   <div class="panels">
     <div class="panel panel1">
       <p>Hey</p>
-      <p>Let's</p>
+      <p class="mouse-change">Let's</p>
       <p>Dance</p>
     </div>
     <div class="panel panel2">
       <p>Give</p>
-      <p>Take</p>
+      <p class="mouse-change">Take</p>
       <p>Receive</p>
     </div>
     <div class="panel panel3">
       <p>Experience</p>
-      <p>It</p>
+      <p class="mouse-change">It</p>
       <p>Today</p>
     </div>
     <div class="panel panel4">
       <p>Give</p>
-      <p>All</p>
+      <p class="mouse-change">All</p>
       <p>You can</p>
     </div>
     <div class="panel panel5">
       <p>Life</p>
-      <p>In</p>
+      <p class="mouse-change">In</p>
       <p>Motion</p>
     </div>
   </div>
